--- a/package.json
+++ b/package.json
@@ -71,8 +71,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@tailwindcss/typography": "^0.5.15",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.20",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -80,15 +87,19 @@
     "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "chai": "^4.5.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "ethers": "^6.13.5",
     "globals": "^15.15.0",
+    "hardhat-gas-reporter": "^1.0.10",
     "lovable-tagger": "^1.1.3",
     "postcss": "^8.4.47",
+    "solidity-coverage": "^0.8.14",
     "tailwindcss": "^3.4.11",
     "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
